--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,6 @@ server:
   port: 8088
   context-path: /api
 
-#user-service:
-#  ribbon:
-#    listOfServers: localhost:8082
-#
-#todo-service:
-#  ribbon:
-#    listOfServers: localhost:8080
-
-
-
-
 zuul:
   routes:
     user:
@@ -25,45 +14,7 @@ zuul:
       url: http://localhost:8080
       stripPrefix: false
 
-    #    tags:
-    #      path: /tags/**
-    #      serviceId: localhost:8080
-    #      stripPrefix: false
-
-    #    user:
-    #      path: /api/login/**
-    #      url: http://localhost:8082/login
-    #    user2:
-    #      path: /api/registration/**
-    #      url: http://localhost:8082/registration
-#    user:
-#      path: /users/**
-#      serviceId: user-service
-#      stripPrefix: false
-#
-#    todos:
-#      path: /todos/**
-#      serviceId: todo-service
-#      stripPrefix: false
-#
-#    tags:
-#      path: /tags/**
-#      serviceId: todo-service
-#      stripPrefix: false
-
-
-#spring:
-#  cloud:
-#    consul:
-#      host: localhost
-#      port: 8500
-#      discovery:
-#        health-check-path: /api/health
-#
-#hystrix:
-#  command:
-#    default:
-#      execution:
-#        isolation:
-#          thread:
-#            timeoutInMilliseconds: 15000
+    tags:
+      path: /tags/**
+      serviceId: http://localhost:8080
+      stripPrefix: false
