--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ ext {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.cloud:spring-cloud-starter-zuul')
+    compile('org.springframework.cloud:spring-cloud-starter-config')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
