--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,3 @@
-server:
-  port: 8088
-  context-path: /api
-
 zuul:
   routes:
     user:
@@ -18,3 +14,7 @@ zuul:
       path: /tags/**
       serviceId: http://localhost:8080
       stripPrefix: false
+
+#server:
+#  port: 8088
+#  context-path: /api
