--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: zuul-proxy
+  profiles:
+    active: container
+  cloud:
+    config:
+      label: master
+      uri: http://config-server:8888
